--- a/client-side/package.json
+++ b/client-side/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.1",
+    "moment": "^2.29.3",
+    "query-string": "^6.5.0",
     "react": "^18.1.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
