--- a/client-side/package.json
+++ b/client-side/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "braintree-web-drop-in-react": "^1.2.1",
     "dotenv": "^16.0.1",
     "moment": "^2.29.3",
     "query-string": "^6.5.0",
